removed extra space by correcting css file

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
    /* border: 1px solid red;*/
     display: grid;  
     grid-template-columns: minmax(10, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(min-content, auto);
     justify-content: center;
 }
 
